--- a/RunOut/res/layout/settings.xml
+++ b/RunOut/res/layout/settings.xml
@@ -24,71 +24,71 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Username"
-            android:id="@+id/textView2"
+            android:id="@+id/usernameLabelForSettings"
             android:layout_gravity="left|center_vertical"/>
 
         <EditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText"
+            android:id="@+id/usernameForSettings"
             />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name"
-            android:id="@+id/name"
+            android:id="@+id/nameLabelForSettings"
             android:layout_gravity="left|center_vertical"/>
 
         <EditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText2"
+            android:id="@+id/nameForSettings"
             android:layout_gravity="left|center_vertical"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Surname"
-            android:id="@+id/textView"
+            android:id="@+id/surnameLabelForSettings"
             android:layout_gravity="left|center_vertical"/>
 
         <EditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText3"
+            android:id="@+id/surnameForSettings"
             android:layout_gravity="left|center_vertical"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Weight(kg)"
-            android:id="@+id/textView3"
+            android:id="@+id/weightLabelForSettings"
             android:layout_gravity="left|center_vertical"/>
 
         <EditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText4"
+            android:id="@+id/weightForSettings"
             android:layout_gravity="left|center_vertical"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Height(cm)"
-            android:id="@+id/textView4"
+            android:id="@+id/heightLabelForSettings"
             android:layout_gravity="left|center_vertical"/>
 
         <EditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText5"
+            android:id="@+id/heightForSettings"
             android:layout_gravity="left|center_vertical"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Save"
+            android:text="Kaydet"
             android:id="@+id/settings_save_button"
             android:layout_gravity="center"
             android:focusable="true"
