database version sorunu geçici çözüm

--- a/RunOut/res/layout/registration.xml
+++ b/RunOut/res/layout/registration.xml
@@ -83,6 +83,13 @@
             android:layout_height="wrap_content"
             android:id="@+id/editText5"
             android:layout_gravity="left|center_vertical" />
+        
+         <Spinner
+        android:id="@+id/spinner_sex"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/sex_arrays"
+        android:prompt="@string/sex_prompt" />
 
         <Button
             android:layout_width="wrap_content"
@@ -92,6 +99,8 @@
             android:layout_gravity="center"
             android:focusable="true"
             android:width="300dp" />
+        
+        
 
     </LinearLayout>
 
